--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,346 @@
+/* CSS RESETS */
+/* 1. Use a more-intuitive box-sizing model */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+/* 2. Remove default margin */
+* {
+  margin: 0;
+}
+
 body {
-  background-color: lightyellow;
+  /* 3. Add accessible line-height */
+  line-height: calc(1em + 0.5rem);
+  /* 4. Improve text rendering */
+  -webkit-font-smoothing: antialiased;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+ 
+/* 5. Improve media defaults */
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+/* 6. Inherit fonts for form controls */
+input, button, textarea, select {
+  font: inherit;
+  font-family: inherit;
+  font-size: 100%;
+}
+
+/* 7. Avoid text overflows */
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+/* 8. Improve line wrapping */
+p {
+  text-wrap: pretty;
+}
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+/*
+  9. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
+}
+
+/* 
+  10. Table reset styles 
+*/
+
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* 
+  11. Initial font family 
+*/
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #000;
+  background-size: 750px;
+  background-position: center center;
+  background-color: #fff;
+  background-repeat: repeat;
+  background-image: url('./subway-title.jpeg');
+  background-attachment: fixed;
+}
+
+/* General layout */
+
+header {
+  position: relative;
+  padding-top: 0.5em;
+  height: 3.5em;
+}
+
+header nav {
+  width: 380px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.tab-list {
+  height: 48px;
+  display: flex;
+}
+
+nav {
+  margin: 0;
+  text-align: center;
+}
+
+nav > button {
+  flex: 1;
+  cursor: pointer;
+}
+
+.tab-list > button {
+  border-top: 1px solid #5e5d5d;
+  border-left: 1px solid #5e5d5d;
+  border-right: 1px solid #5e5d5d;
+  border-bottom: none;
+  background-color: #fff;
+  border-radius: 5px 5px 0px 0px;
+  margin-left: 1.2em;
+}
+
+/* Apply this style when tab is clicked */
+button.cover {
+  background-color: #f69f65;
+  background: linear-gradient(to bottom, #f69f65, #f69f65, #fff);
+}
+
+#content {
+  width: 100%;
+}
+
+.site-container {
+  max-width: 1200px;
+  position: relative;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.site-content {
+  background-color: #fff;
+  position: relative;
+  border-left: 1px solid rgba(0,0,0,0.2);
+  border-right: 1px solid rgba(0,0,0,0.2);
+}
+
+main {
+  position: relative;
+  z-index: 0;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+#main-title,
+#info,
+#hours,
+#location {
+  position: relative;
+  padding-top: 3em;
+  padding-bottom: 1em;
+}
+
+#main-title
+{
+  padding-bottom: 0.5em;
+}
+
+#location {
+  padding-bottom: 2.5em;
+}
+
+#main-title h1 {
+  font-size: 2rem;
+  line-height: calc(1em + 0.5rem);
+}
+
+/* Picture in the back */
+#hours::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('./jollof-rice.png');
+  background-size: 500px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: .15;
+  background-attachment: fixed;
+  pointer-events: none;
+}
+
+.content {
+  text-align: center;
+}
+
+.home-info {
+  margin-bottom: 2.5rem;
+}
+
+.container-sm {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 640px;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+hr {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  border: 2px solid #000;
+}
+
+.hours-info {
+  margin-bottom: 2.5rem;
+}
+
+.hours-info h2,
+.location-info h2 {
+  margin-bottom: 1rem;
+}
+
+ul.hours {
+  list-style-type: none;
+  padding: 0;
+}
+
+footer {
+  border-left: 1px solid rgba(0,0,0,0.2);
+  border-right: 1px solid rgba(0,0,0,0.2);
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.site-footer-desktop {
+  width: 100%;
+}
+
+.site-footer-desktop-secondary {
+  width: 100%;
+}
+
+.site-powered-by {
+  height: 2em;
+  letter-spacing: 0.8px;
+}
+
+.site-powered-by {
+  background-image: url('./marble.avif');
+  background-size: cover;
+  background-position: bottom center;
+}
+
+.site-powered-by {
+  width: 100%;
+  display: table;
+  font-family: inherit;
+  font-size: 0.8125rem;
+  font-weight: normal;
+  text-transform: none;
+  text-align: center;
+  color: #000;
+  background-color: #000;
+}
+
+.site-powered-by > a {
+  font-size: 0.65rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.site-powered-by > a {
+  width: 100%;
+  display: table-cell;
+  color: inherit;
+  text-decoration: none;
+  vertical-align: middle;
+  visibility: inherit;
+}
+
+.site-powered-by > a:hover {
+  text-decoration: underline;
+}
+
+
+@media (min-width: 48.06em) {
+  #main-title h1 {
+    font-size: 2.5rem;
+    text-shadow: 4px 9px 6px #f69f65;
+ }
+  .site-container,
+  footer {
+    max-width: 80%;
+  } 
+  main {
+    min-height: 100vh;
+  }
+}
+
+@media (min-width: 34em) {
+  .container-sm,
+  hr {
+    padding-left: 1.875rem;
+    padding-right: 1.875rem;
+  }
+}
+
+@media (max-width: 48.06em) {
+  #content {
+    width: fit-content;
+  }
+}
+
+@media (max-width: 30em) {
+  #content {
+    width: 100%;
+  }
+
+  .section-content {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
 }
