--- a/src/styles.css
+++ b/src/styles.css
@@ -187,6 +187,14 @@ main {
 #main-title h1 {
   font-size: 2rem;
   line-height: calc(1em + 0.5rem);
+  text-shadow: 4px 9px 6px #f69f65;
+}
+
+#main-title p {
+  font-size: 1.5rem;
+  margin-top: .65em;
+  font-weight: 600;
+  margin-bottom: .65em;
 }
 
 /* Picture in the back */
@@ -305,11 +313,75 @@ footer {
   text-decoration: underline;
 }
 
+/* Menu page */
+
+#menus {
+  margin-top: 4em;
+  position: relative;
+}
+
+.menu-section {
+  text-align: left;
+  margin-bottom: 2.5rem;
+}
+
+.menu-item, .menu-section > div {
+  margin-bottom: 1.5rem;
+}
+
+#menus h2 {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 2rem;
+  color: #000;
+}
+
+.menu-section h2 {
+  margin-bottom: 0;
+  border-top: 3px solid #000;
+  border-bottom: 2px solid #000;
+  padding: .30em 0;
+}
+
+.menu-section > ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+.menu-item .menu-item__heading {
+  font-size: 1.15rem;
+  font-weight: 700;
+  text-transform: none;
+  display: block;
+}
+
+.menu-item__heading {
+  line-height: calc(1em + 0.5rem);
+  margin-bottom: 0;
+}
+
+.menu-item p {
+  margin-bottom: 0;
+}
+
+.menu-section+.menu-section {
+  position: relative;
+  padding-top: 0;
+}
+
+.menu-section--text p {
+  text-align: center;
+}
+
+.menu-section:last-child {
+  padding-bottom: 2em;
+  margin-bottom: 0;
+}
+
 
 @media (min-width: 48.06em) {
   #main-title h1 {
     font-size: 2.5rem;
-    text-shadow: 4px 9px 6px #f69f65;
  }
   .site-container,
   footer {
@@ -317,6 +389,10 @@ footer {
   } 
   main {
     min-height: 100vh;
+  }
+
+  #menus h2 {
+    font-size: 2.25rem;
   }
 }
 
@@ -332,15 +408,15 @@ footer {
   #content {
     width: fit-content;
   }
+  .section-content,
+  .menu-section {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
 }
 
 @media (max-width: 30em) {
   #content {
     width: 100%;
-  }
-
-  .section-content {
-    padding-left: 1em;
-    padding-right: 1em;
   }
 }
