fix: footer background color in background image isn't showing

--- a/src/styles.css
+++ b/src/styles.css
@@ -291,7 +291,7 @@ footer {
   text-transform: none;
   text-align: center;
   color: #000;
-  background-color: #000;
+  background-color: #fff;
 }
 
 .site-powered-by > a {
